test-cases/negative/test_065_invalid_string_escape.lay
# negative test: invalid string escape sequence
# expected: lexer should handle this gracefully

the variable x of type String is 'hello\nworld'


